# oxphys_numerics

./: .gitignore  Cargo.toml  README.md  pyproject.toml
apps/: README.md
apps/benchmarks/: Cargo.toml
apps/benchmarks/src/: main.rs
apps/micromagnetism/: Cargo.toml
apps/micromagnetism/src/ui/: events.rs  mod.rs  plugin.rs  resources.rs
apps/micromagnetism/src/ui/systems/: login_scene.rs  login_window.rs  mod.rs  sign_up_window.rs  system_sets.rs  ui_core.rs
core/: README.md
core/oxphys_numerics/: Cargo.toml  README.md
core/oxphys_numerics/src/: functions.rs  lib.rs
core/oxphys_numerics/src/enums/: binary_node.rs  expr.rs  initialized_expr.rs  initialized_leaf.rs  leaf_node.rs  mod.rs  unary_node.rs  uninitialized_expr.rs  uninitialized_leaf.rs  variable.rs
core/oxphys_numerics/src/errors/: expr_parsing_error.rs  expression_error.rs
core/oxphys_numerics/src/structs/: initialized_variable.rs  instruction_set_architecture.rs  jit_helper.rs  mod.rs  uninitialized_variable.rs  variable.rs
core/oxphys_numerics/src/traits/: expression.rs  expression_compiler.rs  expression_node.rs  mod.rs
core/oxphys_numerics/src/well_known_terms/: mod.rs
core/pybindings/: Cargo.toml  README.md  pyproject.toml
core/pybindings/src/: lib.rs
core/utils/: Cargo.toml  README.md
core/utils/src/: lib.rs
core/utils/src/enums/: binary_node.rs  expr.rs  leaf_node.rs  mod.rs  scalar_type.rs  unary_node.rs
core/utils/src/errors/: length_mismatch_error.rs  mod.rs  no_variable_error.rs  unsupported_type_error.rs
core/utils/src/functions/: gaussian.rs  logistic.rs  mod.rs
core/utils/src/structs/: jit_helper.rs  mod.rs
core/utils/src/traits/: expression.rs  expression_compiler.rs
core/utils/src/well_known_terms/: column_names.rs
src/oxphys_numerics/: __init__.py  models.py
src/oxphys_numerics/errors/: __init__.py  _invalid_expression_error.py  _oxphys_numerics_error.py
tests/: README.md  test_models.py
