[project]
name = "oxphys-numerics"
version = "0.1.0"
description = "The python interface for the oxphys-numerics library"
readme = "README.md"
authors = [
    { name = "Richard Brearton", email = "richard.brearton@physics.ox.ac.uk" },
]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.10.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "PLR0913",
    "SIM117",
    "COM812",
    "T201",
    "D413",
    "PD901",
    "RUF001",
    "PGH003",
]
select = ["ALL"]
unfixable = [
    "F401", # Ignore unused imports.
]


[dependency-groups]
dev = ["maturin>=1.7.7"]
