[project]
name = "oxphys-numerics"
version = "0.1.0"
description = "The python interface for the oxphys-numerics library"
readme = "README.md"
authors = [
    { name = "Richard Brearton", email = "richard.brearton@physics.ox.ac.uk" },
]
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "PLR0913",
    "SIM117",
    "COM812",
    "T201",
    "D413",
    "PD901",
    "RUF001",
    "PGH003",
]
select = ["ALL"]
unfixable = [
    "F401", # Ignore unused imports.
]

[tool.ruff.lint.per-file-ignores]
"**/models.py" = ["D102"]


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "maturin>=1.7.7",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.17.0",
]
