[package]
name = "pybindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxphys_numerics_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = ">=0.21.0"
oxphys_numerics = { path = "../oxphys_numerics" }
